--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Fatima G. Gonzalez - Professional profile</title>
-<link rel="shortcut icon" type="image/png" href="/FGG.png">
+<link rel="shortcut icon" type="image/png" href="/FG-blue.png">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -193,7 +193,7 @@ body, html {
   <h3 class="w3-center">WHERE I AM BASED</h3>
   <div class="w3-row w3-padding-32 w3-section">
     <div class="w3-col m4 w3-container">
-      <img src="/lon.jpg" class="w3-image w3-round" style="width:100%">
+      <img src="/lon.jpg" class="w3-image w3-round" style="width:80%">
     </div>
     <div class="w3-col m8 w3-panel">
       <div class="w3-large w3-margin-bottom">
