--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ body, html {
 /* First image (Logo. Full height) */
 .bgimg-1 {
   background-image: url('/heading.jpg');
-  min-height: 400px;
+  min-height: 200px;
 }
 
 /* Second image (Portfolio) */
@@ -197,7 +197,7 @@ body, html {
   <h3 class="w3-center">WHERE I AM BASED</h3>
   <div class="w3-row w3-padding-32 w3-section">
     <div class="w3-col m4 w3-container">
-      <img src="/lon.jpg" class="w3-image w3-round" style="width:80%">
+      <img src="/lon.png" class="w3-image w3-round" style="width:80%">
     </div>
     <div class="w3-col m8 w3-panel">
       <div class="w3-large w3-margin-bottom">
