--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ body, html {
 /* Create a Parallax Effect */
 .bgimg-1, .bgimg-2, .bgimg-3 {
   background-attachment: fixed;
-  background-position: center;
+  background-position: top;
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -77,7 +77,7 @@ body, html {
 
  
   <hr id="about">
-  <div class="bgimg-1 w3-display-container w3-opacity-min">
+  <div class="bgimg-1 w3-display-container">
     <div class="w3-display-middle">
     </div>
   </div>
