--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ body, html {
   <div class="w3-white w3-xlarge" style="width:100%;margin:auto">
     <div class="w3-button w3-padding-16 w3-left" onclick="w3_open()">☰</div>
     <div class="w3-right w3-padding-16">
-    <a href="/Fatima_Gonzalez_CV.pdf" download="Fatima_Gonzalez_CV"><img src="/CV.png" style="width:15px;height:auto;"></a> 
+    <a href="/Fatima_Gonzalez_CV.pdf" download="Fatima_Gonzalez_CV"><img src="/CV.png" style="width:25px;height:auto;"></a> 
     <a href="mailto:fatimagonzalezglez@gmail.com" target="_blank"> <i class="fa fa-envelope fa-fw w3-hover-opacity"></i></a> 
     <a href="https://www.linkedin.com/in/fatima-gonzalez-gonzalez" target="_blank"/><i class="fa fa-linkedin fa-fw w3-hover-opacity"></i></a>
     <a href="https://github.com/fatimaglezglez" target="_blank"/><i class="fa fa-github fa-fw w3-hover-opacity"></i></a>
@@ -118,7 +118,7 @@ body, html {
 </div>
 
 <!-- Second Parallax Image with Portfolio Text -->
-<div class="bgimg-3 w3-display-container w3-opacity-min">
+<div class="bgimg-3 w3-display-container">
   <div class="w3-display-middle">
     <span class="w3-xxlarge w3-text-white w3-wide">PORTFOLIO</span>
   </div>
@@ -177,7 +177,7 @@ body, html {
 </div>
 
 <!-- Third Parallax Image -->
-<div class="bgimg-2 w3-display-container w3-opacity-min">
+<div class="bgimg-2 w3-display-container">
   <div class="w3-display-middle">
      <span class="w3-xxlarge w3-text-white w3-wide">CONTACT</span>
   </div>
