--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ body, html {
 /* Create a Parallax Effect */
 .bgimg-1, .bgimg-2, .bgimg-3 {
   background-attachment: fixed;
-  background-position: top;
+  background-position: center top;
   background-repeat: no-repeat;
   background-size: cover;
 }
