--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Fatima G. Gonzalez - Professional profile</title>
+<title>Fatima G. Gonzalez - Professional page</title>
 <link rel="shortcut icon" type="image/png" href="/FGG.png">
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -26,7 +26,7 @@ body, html {
 
 /* First image (Logo. Full height) */
 .bgimg-1 {
-  background-image: url('/heading-long.png');
+  background-image: url('/heading.png');
   min-height: 200px;
 }
 
