--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ body, html {
   </div>
 
   <div class="w3-container w3-padding-32 w3-center">
-    <!-- <img src="/heading.png" style="width:100%;height:auto;">  -->
+    <img src="/head.png" style="width:100%;height:auto;">
     <div class="w3-padding-32">
       <p>I am a highly motivated and accomplished scientist with a passion for innovation and business strategy <br>
         and a solid background in bioinformatics and data analysis. <br>
