--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@ body, html {
 
  
   <hr id="about">
-  <div class="bgimg-1 w3-display-container">
+  <!--<div class="bgimg-1 w3-display-container">
     <div class="w3-display-middle">
     </div>
-  </div>
+  </div> -->
 
   <div class="w3-container w3-padding-32 w3-center">
     <img src="/head.png" style="width:100%;height:auto;">
