--- a/index.html
+++ b/index.html
@@ -74,17 +74,17 @@ body, html {
 <div class="w3-top">
   <div class="w3-white w3-xlarge" style="width:100%;margin:auto">
     <div class="w3-button w3-padding-16 w3-left" onclick="w3_open()">☰</div>
-    <div class="w3-right w3-padding-16">
-      <div style="display: inline-block; vertical-align: middle;">
-        <a href="/Fatima_Gonzalez_CV.pdf" download="Fatima_Gonzalez_CV"><img src="/CV.png" style="width:auto;height:20px;"></a> 
-        <a href="mailto:fatimagonzalezglez@gmail.com" target="_blank"> <i class="fa fa-envelope fa-fw"></i></a> 
-        <a href="https://www.linkedin.com/in/fatima-gonzalez-gonzalez" target="_blank"><i class="fa fa-linkedin fa-fw"></i></a>
-        <a href="https://github.com/fatimaglezglez" target="_blank"><i class="fa fa-github fa-fw"></i></a>
-        <a href="https://www.instagram.com/fatimitaglez/" target="_blank"><i class="fa fa-instagram fa-fw"></i></a>
-        <a href="https://www.behance.net/fatimaglezglez" target="_blank"><i class="fa a-brands fa-fw fa-behance"></i></a>&nbsp&nbsp&nbsp&nbsp
-      </div>
+    <div class="w3-right w3-padding-16" style="display: flex; align-items: center;">
+      <a href="/Fatima_Gonzalez_CV.pdf" download="Fatima_Gonzalez_CV" style="margin-right: 10px;">
+        <img src="/CV.png" style="width:auto; height: 20px; vertical-align: middle;">
+      </a> 
+      <a href="mailto:fatimagonzalezglez@gmail.com" target="_blank"><i class="fa fa-envelope fa-fw"></i></a> 
+      <a href="https://www.linkedin.com/in/fatima-gonzalez-gonzalez" target="_blank"><i class="fa fa-linkedin fa-fw"></i></a>
+      <a href="https://github.com/fatimaglezglez" target="_blank"><i class="fa fa-github fa-fw"></i></a>
+      <a href="https://www.instagram.com/fatimitaglez/" target="_blank"><i class="fa fa-instagram fa-fw"></i></a>
+      <a href="https://www.behance.net/fatimaglezglez" target="_blank"><i class="fa a-brands fa-fw fa-behance"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;
     </div>
-    <div class="w3-center w3-padding-16"> &nbsp </div>
+    <div class="w3-center w3-padding-16"> &nbsp; </div>
   </div>
 </div>
 
