--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@ body, html {
 </div> -->
   <!-- Top menu -->
 <div class="w3-top">
-  <div class="w3-white w3-xlarge" style="width:100%;margin:auto">
+  <div class="w3-white w3-xlarge" style="width:100%;margin:auto; line-height: 50px;">
     <div class="w3-button w3-padding-16 w3-left" onclick="w3_open()">☰</div>
-    <div class="w3-right w3-padding-16" style="display: flex; align-items: center;">
+    <div class="w3-right w3-padding-16" style="display: inline-block; vertical-align: middle;">
       <a href="/Fatima_Gonzalez_CV.pdf" download="Fatima_Gonzalez_CV" style="margin-right: 10px;">
         <img src="/CV.png" style="width:auto; height: 20px; vertical-align: middle;">
       </a> 
