--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@ body, html {
     <div class="w3-center w3-padding-16"> &nbsp </div>
   </div>
 </div> -->
-  <!-- Top menu -->
+ <!-- Top menu -->
 <div class="w3-top">
-  <div class="w3-white w3-xlarge" style="width:100%;margin:auto; line-height: 50px;">
-    <div class="w3-button w3-padding-16 w3-left" onclick="w3_open()">☰</div>
-    <div class="w3-right w3-padding-16" style="display: inline-block; vertical-align: middle;">
+  <div class="w3-white w3-xlarge" style="width:100%;margin:auto; display: flex; justify-content: space-between; align-items: center;">
+    <div class="w3-button w3-padding-16" onclick="w3_open()">☰</div>
+    <div class="w3-right w3-padding-16" style="display: flex; align-items: center;">
       <a href="/Fatima_Gonzalez_CV.pdf" download="Fatima_Gonzalez_CV" style="margin-right: 10px;">
         <img src="/CV.png" style="width:auto; height: 20px; vertical-align: middle;">
       </a> 
@@ -82,11 +82,11 @@ body, html {
       <a href="https://www.linkedin.com/in/fatima-gonzalez-gonzalez" target="_blank"><i class="fa fa-linkedin fa-fw"></i></a>
       <a href="https://github.com/fatimaglezglez" target="_blank"><i class="fa fa-github fa-fw"></i></a>
       <a href="https://www.instagram.com/fatimitaglez/" target="_blank"><i class="fa fa-instagram fa-fw"></i></a>
-      <a href="https://www.behance.net/fatimaglezglez" target="_blank"><i class="fa a-brands fa-fw fa-behance"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;
+      <a href="https://www.behance.net/fatimaglezglez" target="_blank"><i class="fa a-brands fa-fw fa-behance"></i></a>
     </div>
-    <div class="w3-center w3-padding-16"> &nbsp; </div>
   </div>
 </div>
+
 
 <!-- !PAGE CONTENT! -->
 
