--- a/index.html
+++ b/index.html
@@ -70,13 +70,13 @@ body, html {
     <div class="w3-center w3-padding-16"> &nbsp </div>
   </div>
 </div> -->
- <!-- Top menu -->
-<div class="w3-top">
-  <div class="w3-white w3-xlarge" style="width:100%;margin:auto; display: flex; justify-content: space-between; align-items: center;">
+<!-- Top menu -->
+<div class="w3-top" style="position: relative;">
+  <div class="w3-white w3-xlarge" style="width:100%;margin:auto; display: flex; align-items: center;">
     <div class="w3-button w3-padding-16" onclick="w3_open()">☰</div>
     <div class="w3-right w3-padding-16" style="display: flex; align-items: center;">
       <a href="/Fatima_Gonzalez_CV.pdf" download="Fatima_Gonzalez_CV" style="margin-right: 10px;">
-        <img src="/CV.png" style="width:auto; height: 20px; vertical-align: middle;">
+        <img src="/CV.png" style="width:auto; height: 20px; vertical-align: middle; display: block;">
       </a> 
       <a href="mailto:fatimagonzalezglez@gmail.com" target="_blank"><i class="fa fa-envelope fa-fw"></i></a> 
       <a href="https://www.linkedin.com/in/fatima-gonzalez-gonzalez" target="_blank"><i class="fa fa-linkedin fa-fw"></i></a>
@@ -86,6 +86,7 @@ body, html {
     </div>
   </div>
 </div>
+
 
 
 <!-- !PAGE CONTENT! -->
