--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ body, html {
 <div class="w3-top" style="position: fixed; width: 100%; z-index: 1;">
   <div class="w3-white w3-xlarge" style="width: 100%; margin: auto; display: flex; align-items: center;">
     <div class="w3-button w3-padding-16" onclick="w3_open()">☰</div>
-    <div class="w3-padding-16" style="display: flex; align-items: center; margin-left: auto;">
+    <div class="w3-padding-16" style="display: flex; align-items: center; margin-left: auto; margin-right: 20px;">
       <a href="/Fatima_Gonzalez_CV.pdf" download="Fatima_Gonzalez_CV" style="margin-right: 10px;">
         <img src="/CV.png" style="width:auto; height: 20px; vertical-align: middle; display: block;">
       </a> 
@@ -89,10 +89,6 @@ body, html {
 
 <!-- !PAGE CONTENT! -->
 <!-- Your page content goes here without the divider line -->
-
-
-
-<!-- !PAGE CONTENT! -->
 
    <!-- About Section -->
 
