--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ body, html {
     <div class="w3-display-middle">
     </div>
   </div> -->
- <img src="/head.png" style="width:100%;height:auto;">
+<img src="/head.png" style="width:100%;height:auto; margin-top: 50px;">
   <div class="w3-container w3-padding-32 w3-center">
     <div class="w3-padding-32">
       <p>I am a highly motivated and accomplished scientist with a passion for innovation and business strategy <br>
