--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@ function w3_close() {
 <img src="/caronegro.icn.png" style="width:auto; height: 20px; vertical-align: middle; display: block;">
 <img src="/fn.png" style="width:auto; height: 20px; vertical-align: middle; display: block;">
 <img src="/BIA.png" style="width:auto; height: 20px; vertical-align: middle; display: block;">
-
+<img src="/ffgo.jpg" style="width:auto; height: 20px; vertical-align: middle; display: block;">
 <div class="w3-padding-16" style="width:auto; height: 20px; vertical-align: middle; display: block;">
       <a href="/poster.pdf" download="Fatima_Gonzalez_CV" style="margin-right: 5px;">
       <i class="fa fa-file fa-fw"
